--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>登録販売者試験 過去問道場</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>登録販売者試験 過去問道場</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="mock_test/setting/setting.html">模擬テスト</a></li>
+                <li><a href="single_question.html">一問一答</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>ようこそ！</h2>
+        <p>模擬テストや一問一答で実力を試しましょう。</p>
+    </main>
+</body>
+</html>
