--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>登録販売者試験 過去問道場</h1>
         <nav>
             <ul>
-                <li><a href="index.html">ホーム</a></li>
+                <li><a href="https://github.com/ryo-2718/RSC/blob/6daff3e399032dba4c007484e59f07ef5498c998/index.html">ホーム</a></li>
                 <li><a href="mock_test/setting/setting.html">模擬テスト</a></li>
                 <li><a href="single_question.html">一問一答</a></li>
             </ul>
