--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="https://github.com/ryo-2718/RSC/blob/6daff3e399032dba4c007484e59f07ef5498c998/index.html">ホーム</a></li>
-                <li><a href="mock_test.html">模擬テスト</a></li>
+                <li><a href="https://github.com/ryo-2718/RSC/blob/f5ccc07ae081de974f629b157f02973c122bc883/question/mock_test/setting/setting.html">模擬テスト</a></li>
                 <li><a href="single_question.html">一問一答</a></li>
             </ul>
         </nav>
