--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -11,8 +11,8 @@
         <h1>登録販売者試験 過去問道場</h1>
         <nav>
             <ul>
-                <li><a href="https://github.com/ryo-2718/RSC/blob/6daff3e399032dba4c007484e59f07ef5498c998/index.html">ホーム</a></li>
-                <li><a href="https://github.com/ryo-2718/RSC/blob/f5ccc07ae081de974f629b157f02973c122bc883/question/mock_test/setting/setting.html">模擬テスト</a></li>
+                <li><a href="https://ryo-2718.github.io/RSC/index.html">ホーム</a></li>
+                <li><a href="https://ryo-2718.github.io/RSC/question/mock_test/setting/setting.html">模擬テスト</a></li>
                 <li><a href="single_question.html">一問一答</a></li>
             </ul>
         </nav>
@@ -25,7 +25,7 @@
             <div id="result"></div>
         </div>
     </main>
-    <script src="question.js"></script>
+    <script src="single_question.js"></script>
     <script src="questions.js"></script>
 </body>
 </html>
