--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -11,9 +11,9 @@
         <h1>登録販売者試験 過去問道場</h1>
         <nav>
             <ul>
-                <li><a href="https://github.com/ryo-2718/RSC/blob/6daff3e399032dba4c007484e59f07ef5498c998/index.html">ホーム</a></li>
+                <li><a href="https://ryo-2718.github.io/RSC/index.html">ホーム</a></li>
                 <li><a href="setting.html">模擬テスト</a></li>
-                <li><a href="https://github.com/ryo-2718/RSC/blob/30806c5591d04ba3e92fd9dc0c21c5cae4477fd5/question/single_question/single_question.html">一問一答</a></li>
+                <li><a href="https://ryo-2718.github.io/RSC/question/single_question/single_question.html">一問一答</a></li>
             </ul>
         </nav>
     </header>
