--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -30,9 +30,8 @@
                     <th>5章</th>
                 </tr>
             </thead>
-            <tbody>
-                <!-- 年代と章の組み合わせ -->
-                ${generateRows(['H20_1', 'H20_2', 'H21', 'H22', 'H23', 'H24', 'H25', 'H26', 'H27', 'H28', 'H29', 'H30', 'R1', 'R2', 'R3', 'R4'])}
+            <tbody id="table-body">
+                <!-- JavaScript でテーブル行が生成されます -->
             </tbody>
         </table>
     </main>
