--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="https://ryo-2718.github.io/RSC/index.html">ホーム</a></li>
-                <li><a href="setting.html">模擬テスト</a></li>
+                <li><a href="setting.html">模擬試験</a></li>
                 <li><a href="https://ryo-2718.github.io/RSC/question/single_question/single_question.html">一問一答</a></li>
             </ul>
         </nav>
@@ -23,11 +23,11 @@
             <thead>
                 <tr>
                     <th></th>
-                    <th>1章</th>
-                    <th>2章</th>
-                    <th>3章</th>
-                    <th>4章</th>
-                    <th>5章</th>
+                    <th>1章 <input type="checkbox" id="chapter_1" onchange="toggleChapter(1)"></th>
+                    <th>2章 <input type="checkbox" id="chapter_2" onchange="toggleChapter(2)"></th>
+                    <th>3章 <input type="checkbox" id="chapter_3" onchange="toggleChapter(3)"></th>
+                    <th>4章 <input type="checkbox" id="chapter_4" onchange="toggleChapter(4)"></th>
+                    <th>5章 <input type="checkbox" id="chapter_5" onchange="toggleChapter(5)"></th>
                 </tr>
             </thead>
             <tbody id="table-body">
