--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -19,6 +19,12 @@
     </header>
     <main>
         <h2>設定</h2>
+        
+        <div class="toggle-container">
+            <label for="mock-exam-toggle">模擬試験モード</label>
+            <input type="checkbox" id="mock-exam-toggle" onchange="toggleMockExamMode()">
+        </div>
+        
         <table>
             <thead>
                 <tr>
