--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -26,6 +26,6 @@
         </div>
     </main>
     <script src="single_question.js"></script>
-    <script src="questions.js"></script>
+    <script src="https://ryo-2718.github.io/RSC/question/questons/chapter_1/H20-1.js"></script>
 </body>
 </html>
