--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -21,8 +21,8 @@
         <h2>一問一答</h2>
         <div id="question-container">
             <button onclick="loadQuestion()">次の問題</button>
-            <div id="question"></div>
-            <div id="result"></div>
+            <div id="question" class="responsive-container"></div>
+            <div id="result" class="responsive-container"></div>
         </div>
     </main>
     <script src="https://ryo-2718.github.io/RSC/question/questons/chapter_1/H20-1.js"></script>
