--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -19,10 +19,10 @@
     </header>
     <main>
         <h2>一問一答</h2>
-        <div id="question-container">
-            <button onclick="loadQuestion()">次の問題</button>
-            <div id="question" class="responsive-container"></div>
-            <div id="result" class="responsive-container"></div>
+        <div id="question-container" class="responsive-container">
+            <div id="question"></div>
+            <div id="result"></div>
+            <button id="next-question-button" onclick="loadQuestion()">次の問題</button>
         </div>
     </main>
     <script src="https://ryo-2718.github.io/RSC/question/questons/chapter_1/H20-1.js"></script>
