--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -21,6 +21,8 @@
         <h2>一問一答</h2>
         <div id="question-container" class="responsive-container">
             <div id="question"></div>
+            <div id="options"></div>
+            <div id="buttons"></div>
             <div id="result"></div>
             <button id="next-question-button" onclick="loadQuestion()">次の問題</button>
         </div>
