--- a/feedback/index.html
+++ b/feedback/index.html
@@ -4,31 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>フィードバックフォーム</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        iframe {
+            border: none;
+            width: 100%;
+            max-width: 640px;
+            height: 800px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>フィードバックフォーム</h1>
-        <form id="feedbackForm">
-            <label for="type">種類:</label>
-            <select id="type" name="type" required>
-                <option value="">選択してください</option>
-                <option value="feedback">フィードバック</option>
-                <option value="inquiry">問い合わせ</option>
-            </select>
-
-            <label for="name">名前 (任意):</label>
-            <input type="text" id="name" name="name">
-
-            <label for="message">内容:</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <label for="email" id="emailLabel" style="display: none;">メールアドレス (問い合わせの場合必須):</label>
-            <input type="email" id="email" name="email" style="display: none;">
-
-            <button type="submit">送信</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
+    <!-- Google Formsで作成したフォームの埋め込みコード -->
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd47Cg4Es39E08Eou5zctikfbRRW0fXZzUHFRf5CND9ZWl_UQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 </body>
 </html>
