--- a/feedback/index.html
+++ b/feedback/index.html
@@ -4,27 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>フィードバックフォーム</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        iframe {
-            border: none;
-            width: 100%;
-            max-width: 640px;
-            height: 800px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Google Formsで作成したフォームの埋め込みコード -->
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd47Cg4Es39E08Eou5zctikfbRRW0fXZzUHFRf5CND9ZWl_UQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+    <div class="container">
+        <!-- Google Formsで作成したフォームの埋め込みコード -->
+        <iframe src="https://docs.google.com/forms/d/e/FORM_ID_HERE/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+    </div>
 </body>
 </html>
