--- a/feedback/index.html
+++ b/feedback/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="https://ryo-2718.github.io/RSC/index.html">ホーム</a></li>
-                <li><a href="https://ryo-2718.github.io/RSC/question/mock_test/setting/setting.html">模擬テスト</a></li>
+                <li><a href="https://ryo-2718.github.io/RSC/question/mock_test/setting/setting.html">模擬試験</a></li>
                 <li><a href="single_question.html">一問一答</a></li>
             </ul>
         </nav>
