--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">ホーム</a></li>
-                <li><a href="question/mock_test/setting/setting.html">模擬テスト</a></li>
+                <li><a href="question/mock_test/setting/setting.html">模擬試験</a></li>
                 <li><a href="question/single_question/single_question.html">一問一答</a></li>
             </ul>
         </nav>
