--- a/feedback/index.html
+++ b/feedback/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>フィードバックフォーム</title>
+    <title>フィードバックフォーム - 登録販売者試験 過去問道場</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,9 +17,11 @@
             </ul>
         </nav>
     </header>
+    <main>
     <div class="container">
         <!-- Google Formsで作成したフォームの埋め込みコード -->
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfI-wg31uClcCPGN_X_wqLpRc2MjviFxR6hS3E7VjCF3mDHwA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
     </div>
+    </main>
 </body>
 </html>
