--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">ホーム</a></li>
                 <li><a href="question/mock_test/setting/setting.html">模擬試験</a></li>
                 <li><a href="question/single_question/single_question.html">一問一答</a></li>
+                <li><a href="https://ryo-2718.github.io/RSC/feedback/index.html">フィードバック</a></li>
             </ul>
         </nav>
     </header>
