--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -22,7 +22,7 @@
         <h2>設定</h2>
         
         <div class="toggle-container">
-            <label for="toggle-switch">機能スイッチ: </label>
+            <label for="toggle-switch">模擬試験モード: </label>
             <input type="radio" id="toggle-on" name="toggle" value="on" checked onchange="toggleFunction(true)">
             <label for="toggle-on">オン</label>
             <input type="radio" id="toggle-off" name="toggle" value="off" onchange="toggleFunction(false)">
