--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -20,12 +20,19 @@
     </header>
     <main>
         <h2>設定</h2>
-
+        
         <div class="toggle-container">
-            <input type="radio" id="toggle-switch" name="toggle" value="toggle" checked onchange="toggleFunction(this.checked)">
-            <label for="toggle-switch" class="toggle-label">模擬試験モード</label>
+            <label for="toggle-switch">模擬試験モード: </label>
+            <label class="toggle-label">
+                <input type="radio" id="toggle-on" name="toggle" value="on" checked onchange="toggleFunction(true)">
+                <span class="toggle-button">オン</span>
+            </label>
+            <label class="toggle-label">
+                <input type="radio" id="toggle-off" name="toggle" value="off" onchange="toggleFunction(false)">
+                <span class="toggle-button">オフ</span>
+            </label>
         </div>
-
+        
         <table>
             <thead>
                 <tr>
