--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -24,11 +24,11 @@
         <div class="toggle-container">
             <label for="toggle-switch">模擬試験モード: </label>
             <label class="toggle-label">
-                <input type="radio" id="toggle-on" name="toggle" value="on" checked onchange="toggleFunction(true)">
+                <input type="radio" id="toggle-on" name="toggle" value="on" onchange="toggleFunction(true)">
                 <span class="toggle-button">オン</span>
             </label>
             <label class="toggle-label">
-                <input type="radio" id="toggle-off" name="toggle" value="off" onchange="toggleFunction(false)">
+                <input type="radio" id="toggle-off" name="toggle" value="off" checked onchange="toggleFunction(false)">
                 <span class="toggle-button">オフ</span>
             </label>
         </div>
