--- a/question/mock_test/mock_test.html
+++ b/question/mock_test/mock_test.html
@@ -44,7 +44,18 @@
             <button id="toggle-result" onclick="toggleResult()">結果を表示</button>
         </div>
     </main>
+    <script>
+    const chapters = 6;
+    const questions = ["H20_1", "H20_2", "H21", "H22", "H23", "H24", "H25", "H26", "H27", "H28", "H29", "H30", "R1", "R2", "R3", "R4"];
+
+    for (let chapter = 1; chapter <= chapters; chapter++) {
+        questions.forEach(question => {
+            const script = document.createElement('script');
+            script.src = `https://ryo-2718.github.io/RSC/question/questions/chapter_${chapter}/${question}.js`;
+            document.head.appendChild(script);
+        });
+    }
+</script>
     <script src="mock_test.js"></script>
-    <script src="questions.js"></script>
 </body>
 </html>
