--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -28,7 +28,18 @@
             <button id="next-question-button" onclick="loadQuestion()">次の問題</button>
         </div>
     </main>
-    <script src="https://ryo-2718.github.io/RSC/question/questons/chapter_1/H20-1.js"></script>
+<script>
+    const chapters = 6;
+    const questions = ["H20_1", "H20_2", "H21", "H22", "H23", "H24", "H25", "H26", "H27", "H28", "H29", "H30", "R1", "R2", "R3", "R4"];
+
+    for (let chapter = 1; chapter <= chapters; chapter++) {
+        questions.forEach(question => {
+            const script = document.createElement('script');
+            script.src = `https://ryo-2718.github.io/RSC/question/questions/chapter_${chapter}/${question}.js`;
+            document.head.appendChild(script);
+        });
+    }
+</script>
     <script src="single_question.js"></script>
 </body>
 </html>
