--- a/question/single_question/single_question.html
+++ b/question/single_question/single_question.html
@@ -30,7 +30,7 @@
     </main>
 <script>
     const chapters = 5;
-    const questions = ["H20_1", "H20_2", "H21", "H22", "H23", "H24", "H25", "H26", "H27", "H28", "H29", "H30", "R1", "R2", "R3", "R4"];
+    const questions = ["H20-1", "H20-2", "H21", "H22", "H23", "H24", "H25", "H26", "H27", "H28", "H29", "H30", "R1", "R2", "R3", "R4"];
 
     for (let chapter = 1; chapter <= chapters; chapter++) {
         questions.forEach(question => {
