--- a/question/mock_test/mock_test.html
+++ b/question/mock_test/mock_test.html
@@ -45,8 +45,8 @@
         </div>
     </main>
     <script>
-    const chapters = 5;
-    const questions = ["H20-1", "H20-2", "H21", "H22", "H23", "H24", "H25", "H26", "H27", "H28", "H29", "H30", "R1", "R2", "R3", "R4"];
+    const F_chapters = 5;
+    const F_questions = ["H20-1", "H20-2", "H21", "H22", "H23", "H24", "H25", "H26", "H27", "H28", "H29", "H30", "R1", "R2", "R3", "R4"];
 
     for (let chapter = 1; chapter <= chapters; chapter++) {
         questions.forEach(question => {
