setting.html を更新

--- a/question/mock_test/setting/setting.html
+++ b/question/mock_test/setting/setting.html
@@ -18,6 +18,7 @@
             </ul>
         </nav>
     </header>
+    <!-- 
     <main>
         <h2>設定</h2>
         
@@ -41,12 +42,13 @@
                 </tr>
             </thead>
             <tbody id="table-body">
-                <!-- JavaScript でテーブル行が生成されます -->
+                <!-- JavaScript でテーブル行が生成されます 
             </tbody>
         </table>
         
         <button id="next-button">次へ</button>
     </main>
+    -->
     <script src="setting.js"></script>
     <script>
         function getMockTestMode() {
